# travel-website

./: .gitignore  css.txt  index.html  package-lock.json  package.json  vite.config.js
assets/: index-U3yk9Mbq.js
deploy/: index.html
deploy/assets/: index-BLlTfFvw.css
src/: App.jsx  index.css  main.jsx
src/components/: SplashScreen.jsx
src/contexts/: AuthContext.jsx
src/data/: travelInfoData.js
src/pages/: AllTripsPage.jsx  CartPage.jsx  CheckoutPage.jsx  CustomerServicePage.jsx  ItinerarySearchPage.jsx  MemberAreaPage.jsx  OrderLookupPage.jsx  PackagesPage.jsx  SpotDetailsPage.jsx  TravelInfoSubPage.jsx
src/sanity/: client.js
src/services/: api.js
tourback/: auth.py  database.py  dockerfile  main.py  makefile  pyproject.toml  requirements.txt
